--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Laravel 5 runnable environments",
     "homepage": "https://github.com/atayahmet/runnable",
-    "keywords": ["runnable","artisan","sql","model","laravel"],
+    "keywords": ["runnable","artisan","sql","model","laravel", "interactive", "live php"],
     "license": "MIT",
     "authors": [
         {
@@ -14,9 +14,12 @@
         }
     ],
     "require": {
-        "php": ">=5.5.5",
+        "php": ">=5.5.9",
+        "illuminate/console": "5.2.*|5.3.*",
         "illuminate/support": "5.2.*|5.3.*",
-        "illuminate/database": "5.2.*|5.3.*"
+        "illuminate/database": "5.2.*|5.3.*",
+        "symfony/console": ">=2.8.* <=3.1.*",
+        "symfony/debug": ">=2.8.* <=3.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
@@ -26,10 +29,7 @@
         "psr-4": {
             "Runnable\\": "src/",
             "Runnable\\Tests\\": "tests/"
-        },
-        "files": [
-          "src/helpers.php"
-        ]
+        }
     },
     "minimum-stability": "dev"
 }
