--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "illuminate/console": "5.2.*|5.3.*",
         "illuminate/support": "5.2.*|5.3.*",
         "illuminate/database": "5.2.*|5.3.*",
-        "symfony/console": ">=2.8.* <=3.1.*",
-        "symfony/debug": ">=2.8.* <=3.1.*"
+        "symfony/console": ">=2.8 <=3.1",
+        "symfony/debug": ">=2.8 <=3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
